[project]
name = "comfyui-animated-optical-illusions"
description = "Animated optical illusions in ComfyUI"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-Animated-optical-illusions"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Animated-optical-illusions"
Icon = ""
